# tauri-app-template

./: .gitignore  README.md  package-lock.json  package.json  release.ps1  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/layout/: TitleBar.vue
src/stores/: counter.ts
src/styles/: index.less
src/views/: Home.vue
